--- a/Tianfu_pipeline.ipynb
+++ b/Tianfu_pipeline.ipynb
@@ -10,18 +10,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "60a94525-6c27-424d-86f5-806fe267e0ed",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(1181, 832) (1181, 1)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -46,15 +38,19 @@
     "import pandas as pd\n",
     "from sklearn.metrics import r2_score\n",
     "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.feature_selection import SelectKBest, f_regression, mutual_info_regression, SelectFromModel\n",
+    "from sklearn.ensemble import ExtraTreesRegressor\n",
+    "from scipy.stats import pearsonr\n",
+    "import lightgbm as lgb\n",
+    "\n",
+    "\n",
+    "\n",
     "X = pd.read_csv(os.path.join(\"data\", \"X_train.csv\"),\n",
     "                delimiter=',',\n",
     "                index_col = 'id')\n",
     "y = pd.read_csv(os.path.join(\"data\", \"y_train.csv\"),\n",
     "                delimiter=',',\n",
     "                index_col='id')\n",
-    "from sklearn.feature_selection import SelectKBest, f_regression, mutual_info_regression, SelectFromModel\n",
-    "from sklearn.ensemble import ExtraTreesRegressor\n",
-    "from scipy.stats import pearsonr\n",
     "\n",
     "\n",
     "\n",
@@ -77,59 +73,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "3a48b914-ec2f-49a9-9316-d23dc8438375",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/scratch_net/troubadour/tianfwang/conda_envs/pytorch3d/lib/python3.9/site-packages/scipy/stats/_stats_py.py:4068: PearsonRConstantInputWarning: An input array is constant; the correlation coefficient is not defined.\n",
-      "  warnings.warn(PearsonRConstantInputWarning())\n",
-      "/scratch_net/troubadour/tianfwang/conda_envs/pytorch3d/lib/python3.9/site-packages/scipy/stats/_stats_py.py:4068: PearsonRConstantInputWarning: An input array is constant; the correlation coefficient is not defined.\n",
-      "  warnings.warn(PearsonRConstantInputWarning())\n",
-      "/scratch_net/troubadour/tianfwang/conda_envs/pytorch3d/lib/python3.9/site-packages/scipy/stats/_stats_py.py:4068: PearsonRConstantInputWarning: An input array is constant; the correlation coefficient is not defined.\n",
-      "  warnings.warn(PearsonRConstantInputWarning())\n",
-      "/scratch_net/troubadour/tianfwang/conda_envs/pytorch3d/lib/python3.9/site-packages/scipy/stats/_stats_py.py:4068: PearsonRConstantInputWarning: An input array is constant; the correlation coefficient is not defined.\n",
-      "  warnings.warn(PearsonRConstantInputWarning())\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "Index(['x2', 'x15', 'x21', 'x23', 'x26', 'x27', 'x29', 'x40', 'x69', 'x77',\n",
-       "       ...\n",
-       "       'x777', 'x778', 'x780', 'x788', 'x796', 'x801', 'x817', 'x819', 'x823',\n",
-       "       'x824'],\n",
-       "      dtype='object', length=192)"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "thresh_corr = 0.1\n",
     "\n",
     "df_train = pd.DataFrame(X_cleaned, columns=X.columns)\n",
-    "features = df_train.iloc[:,1:].columns.tolist()\n",
-    "labels = y_cleaned\n",
+    "feat = df_train.iloc[:,1:].columns.tolist()\n",
     "corr = {}\n",
-    "for f in features:\n",
+    "for f in feat:\n",
     "    x_f = df_train[[f]][f].values\n",
     "    key = f\n",
     "    corr[key] = pearsonr(x_f,y_cleaned)[0]\n",
     "\n",
     "data_corr = pd.DataFrame(corr, index=['lin']).T\n",
-    "selected_features = data_corr.loc[(abs(data_corr['lin']) >= thresh_corr) ].index\n",
-    "selected_features\n"
+    "selected_feat = data_corr.loc[(abs(data_corr['lin']) >= thresh_corr) ].index\n",
+    "selected_feat\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "58a2b52a-3cd5-4eb0-aaa2-56b535f9fd74",
    "metadata": {},
    "outputs": [],
@@ -138,7 +104,7 @@
     "\n",
     "X_train = sklearn.preprocessing.StandardScaler().fit(X_cleaned).transform(X_train)\n",
     "X_train  = pd.DataFrame(X_train, columns=X.columns)\n",
-    "X_train = X_train[selected_features].values"
+    "X_train = X_train[selected_feat].values"
    ]
   },
   {
@@ -146,16 +112,7 @@
    "execution_count": null,
    "id": "c222e44d-c269-48f1-8e0f-dac46d83e4ef",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/scratch_net/troubadour/tianfwang/conda_envs/pytorch3d/lib/python3.9/site-packages/sklearn/base.py:443: UserWarning: X has feature names, but KNNImputer was fitted without feature names\n",
-      "  warnings.warn(\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "X_test = pd.read_csv(os.path.join(\"data\", \"X_test.csv\"),\n",
     "                         delimiter=',',\n",
@@ -163,7 +120,7 @@
     "\n",
     "X_test_KNN = imputer.fit(X_cleaned).transform(X_test)\n",
     "X_test = pd.DataFrame(X_test_KNN, columns=X_test.columns, index=X_test.index)\n",
-    "# X_test = X_test[selected_features]\n",
+    "# X_test = X_test[selected_feat]\n",
     "X_test_stdised = sklearn.preprocessing.StandardScaler().fit(X_cleaned).transform(X_test)\n"
    ]
   },
@@ -175,7 +132,7 @@
    "outputs": [],
    "source": [
     "X_test_stdised = pd.DataFrame(X_test_stdised, columns=X_test.columns, index=X_test.index)\n",
-    "X_test_stdised = X_test_stdised[selected_features].values"
+    "X_test_stdised = X_test_stdised[selected_feat].values"
    ]
   },
   {
@@ -244,18 +201,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "1a3fed8f-1203-407f-bcac-719026ced2af",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['./test/corr_linear.csv', './test/lgb_multirun.csv', './test/lgb.csv']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import glob\n",
     "print(glob.glob(\"./test/*\"))"
@@ -263,18 +212,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "id": "634935b9-0973-4836-b57a-308eb5a81f7e",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['./test/corr_linear.csv', './test/lgb_multirun.csv', './test/lgb.csv']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "inputs = glob.glob(\"./ensemble/*\")\n",
     "print(inputs)\n",
